correct responsive design The viewport meta tag was missing from the html so this commit adds it. This tag is required for responsiveness on mobile devices

--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ img {
     color: white;
 }
 
-@media only screen and (min-width: 520px) {
+@media screen and (min-width: 520px) {
     .section {
         height: 100%;
     }
